--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:performance": "artillery run --output report.json artillery-config.yml" 
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "mysql2": "^3.9.2"
+  },
+  "devDependencies": {
+    "artillery": "^2.0.21"
   }
 }
